--- a/pr-preview/pr-91/layout/custom-layout.html
+++ b/pr-preview/pr-91/layout/custom-layout.html
@@ -1,22 +1,22 @@
 <!doctype html>
-<html lang="sv" class="layout--content-with-menu" data-root-url="../..">
+<html lang="sv" class="layout--article" data-root-url="..">
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <title>Sorted Page 3 - FK Documentation generator</title>
+        <title>Custom layout - FK Documentation generator</title>
 
         <!-- prettier-ignore -->
         <link
             rel="stylesheet"
-            href="../../assets/docs-5e8325.css"
+            href="../assets/docs-5e8325.css"
             crossorigin
             integrity="sha384-K0z+WszeGyODF66/rEzsvws0zVALabnnHF4EaIj2dTXMpnuGFsoKAX7RVHbxpm4i"
             
         />
         <link
             rel="stylesheet"
-            href="../../assets/fkui-6731bf.css"
+            href="../assets/fkui-6731bf.css"
             crossorigin
             integrity="sha384-CdscpJw+W0MWcuh5QAfi5vHxa+7WzzBQQ6VbYkklY8JqgLlPSeSja3fBVKgKvRjA"
             
@@ -24,7 +24,7 @@
 
         <!-- prettier-ignore -->
         <script
-            src="../../assets/bootstrap-9b4d6e.js"
+            src="../assets/bootstrap-9b4d6e.js"
             crossorigin
             integrity="sha384-N4fFZAMddKCgX0hXwjB3m9i2JNAHTIFpORMICVw8ZhJ5Hn4f5tb6oH81EEid04O4"
             
@@ -35,7 +35,7 @@
 
         <link
             rel="preload"
-            href="../../search-data-8a4aef.json"
+            href="../search-data-8a4aef.json"
             as="fetch"
             crossorigin
             integrity="sha384-Lm4/MObJMAsdFKHE1pdrdE4C9zV/4ZMBxjhwWg2B/kSsRLFga/GZvl5ykrTn1Oqs"
@@ -69,10 +69,10 @@
             <header>
                 <!-- prettier-ignore --><div class="page-header__root">
     <div class="page-header">
-        <a class="page-header__logo" href="../../index.html">
+        <a class="page-header__logo" href="../index.html">
             <span aria-label="FK Documentation generator" role="img" class="page-header__logo--small"> </span>
         </a>
-        <a class="page-header__app-name" href="../../index.html"> FK Documentation generator </a>
+        <a class="page-header__app-name" href="../index.html"> FK Documentation generator </a>
         <div class="page-header__right"><nav class="imenu imenu--horizontal" aria-label="Primär">
     <ul class="imenu__list">
         <!-- prettier-ignore -->
@@ -84,7 +84,7 @@
             >
                 <a
                     class="imenu__list__anchor "
-                    href="../../theme/"
+                    href="../theme/"
                 >
                     Theme
                 </a>
@@ -98,7 +98,7 @@
             >
                 <a
                     class="imenu__list__anchor "
-                    href="../../processors/"
+                    href="../processors/"
                 >
                     Processors
                 </a>
@@ -106,13 +106,13 @@
         </li>
         
         
-        <li class="imenu__list__item imenu__list__item--highlight">
+        <li class="imenu__list__item ">
             <div
-                class="imenu__list__anchor-container imenu__list__anchor-container--highlight"
+                class="imenu__list__anchor-container "
             >
                 <a
-                    class="imenu__list__anchor imenu__list__anchor--highlight"
-                    href="../"
+                    class="imenu__list__anchor "
+                    href="../navigation/"
                 >
                     Navigation
                 </a>
@@ -126,7 +126,7 @@
             >
                 <a
                     class="imenu__list__anchor "
-                    href="../../markdown/"
+                    href="../markdown/"
                 >
                     Markdown
                 </a>
@@ -140,7 +140,7 @@
             >
                 <a
                     class="imenu__list__anchor "
-                    href="../../live-example/"
+                    href="../live-example/"
                 >
                     Live example
                 </a>
@@ -148,13 +148,13 @@
         </li>
         
         
-        <li class="imenu__list__item ">
+        <li class="imenu__list__item imenu__list__item--highlight">
             <div
-                class="imenu__list__anchor-container "
+                class="imenu__list__anchor-container imenu__list__anchor-container--highlight"
             >
                 <a
-                    class="imenu__list__anchor "
-                    href="../../layout/"
+                    class="imenu__list__anchor imenu__list__anchor--highlight"
+                    href="./"
                 >
                     Layout
                 </a>
@@ -168,7 +168,7 @@
             >
                 <a
                     class="imenu__list__anchor "
-                    href="../../changelog.html"
+                    href="../changelog.html"
                 >
                     Changelog
                 </a>
@@ -211,191 +211,132 @@
     <li class="link ">
         <!-- prettier-ignore -->
         <a
-            href="../"
+            href="./"
             
         >
-            Navigation
-        </a>
-    </li><!-- prettier-ignore --><!-- prettier-ignore -->
-    <!-- prettier-ignore -->
-    <li class="link ">
-        <!-- prettier-ignore -->
-        <a
-            href="../child-page-1.html"
-            
-        >
-            Child Page 1
-        </a>
-    </li><!-- prettier-ignore --><!-- prettier-ignore -->
-    <!-- prettier-ignore -->
-    <li class="link ">
-        <!-- prettier-ignore -->
-        <a
-            href="../child-page-2.html"
-            
-        >
-            Child Page 2
-        </a>
-    </li><!-- prettier-ignore --><!-- prettier-ignore -->
-    <!-- prettier-ignore -->
-    <li class="link ">
-        <!-- prettier-ignore -->
-        <a
-            href="../child-page-3.html"
-            
-        >
-            Child Page 3
-        </a>
-    </li><!-- prettier-ignore --><!-- prettier-ignore -->
-    <li class="expandable ">
-        <details >
-            <summary>Expandable group</summary>
-            <!-- prettier-ignore -->
-            
-            
-<ol>
-    <!-- prettier-ignore --><!-- prettier-ignore -->
-    <!-- prettier-ignore -->
-    <li class="link ">
-        <!-- prettier-ignore -->
-        <a
-            href="../group/nested-page-1.html"
-            
-        >
-            Nested Page 1
-        </a>
-    </li><!-- prettier-ignore --><!-- prettier-ignore -->
-    <!-- prettier-ignore -->
-    <li class="link ">
-        <!-- prettier-ignore -->
-        <a
-            href="../group/nested-page-2.html"
-            
-        >
-            Nested Page 2
-        </a>
-    </li><!-- prettier-ignore --><!-- prettier-ignore -->
-    <!-- prettier-ignore -->
-    <li class="link ">
-        <!-- prettier-ignore -->
-        <a
-            href="../group/nested-page-3.html"
-            
-        >
-            Nested Page 3
-        </a>
-    </li><!-- prettier-ignore --></ol>
-
-            
-        </details>
-    </li><!-- prettier-ignore -->
-    <!-- prettier-ignore --><!-- prettier-ignore -->
-    <!-- prettier-ignore -->
-    <li class="link ">
-        <!-- prettier-ignore -->
-        <a
-            href="../../changelog.html"
-            
-            target="_blank"
-            rel="external"
-            data-path="changelog.html"
-            
-        >
-            Link to Changelog
-        </a>
-    </li><!-- prettier-ignore --><!-- prettier-ignore -->
-    <!-- prettier-ignore -->
-    <li class="link ">
-        <!-- prettier-ignore -->
-        <a
-            href="https://developer.mozilla.org"
-            
-            target="_blank"
-            rel="external"
-            data-path="https://developer.mozilla.org"
-            
-        >
-            Link to external site
-        </a>
-    </li><!-- prettier-ignore --><!-- prettier-ignore -->
-    <li class="expandable active">
-        <details open>
-            <summary>Sorted group</summary>
-            <!-- prettier-ignore -->
-            
-            
-<ol>
-    <!-- prettier-ignore --><!-- prettier-ignore -->
-    <!-- prettier-ignore -->
-    <li class="link ">
-        <!-- prettier-ignore -->
-        <a
-            href="./top-page.html"
-            
-        >
-            Top page
+            Layout
         </a>
     </li><!-- prettier-ignore --><!-- prettier-ignore -->
     <!-- prettier-ignore -->
     <li class="link active">
         <!-- prettier-ignore -->
         <a
-            href="./sorted-page-3.html"
+            href="./custom-layout.html"
             
         >
-            Sorted Page 3
+            Custom layout
         </a>
     </li><!-- prettier-ignore --><!-- prettier-ignore -->
     <!-- prettier-ignore -->
     <li class="link ">
         <!-- prettier-ignore -->
         <a
-            href="./sorted-page-1.html"
+            href="./overriding-templates.html"
             
         >
-            Sorted Page 1
+            Overriding templates
         </a>
     </li><!-- prettier-ignore --><!-- prettier-ignore -->
     <!-- prettier-ignore -->
     <li class="link ">
         <!-- prettier-ignore -->
         <a
-            href="./sorted-page-2.html"
+            href="./plumbing.html"
             
         >
-            Sorted Page 2
+            Plumbing
         </a>
     </li><!-- prettier-ignore --></ol>
-
-            
-        </details>
-    </li><!-- prettier-ignore -->
-    <!-- prettier-ignore --></ol>
 </nav>
 </div>
 
 
                 <!-- prettier-ignore -->
                 <script
-                    src="../../assets/vendor-vue-e0b15c.js"
+                    src="../assets/vendor-vue-e0b15c.js"
                     crossorigin
                     integrity="sha384-wALRoUVsRyCWSCOSjgPI23zho+gf6d8JD1ryn5B/68gYF8rQlnOEcF6iZ8VB6n20"
                 ></script>
                 <script
-                    src="../../assets/vendor-forsakringskassan-docs-live-example-caabe5.js"
+                    src="../assets/vendor-forsakringskassan-docs-live-example-caabe5.js"
                     crossorigin
                     integrity="sha384-COa+K2pIEMfZRsufv3uA32N6otKo/IltB1HxAHUR9URjRR1g2nop3l0NJonpSgiu"
                 ></script>
 
                 <!-- prettier-ignore --><main>
                     <!-- [html-validate-disable-next heading-level, no-unused-disable -- allowed sectioning root] -->
-                    <h1 id="title">Sorted Page 3</h1>
+                    <h1 id="title">Custom layout</h1>
 
+                    
+                    <div id="aside">
+                        <!-- prettier-ignore -->
+<dl></dl>
+
+
+                        
+                        <details id="outline">
+                            <summary class="outline__heading">Innehåll</summary>
+                            <ul>
+                                
+                                <li><a href="#base_template">Base template</a></li>
+                                
+                                <li><a href="#layout_options">Layout options</a></li>
+                                
+                                <li><a href="#layout_blocks">Layout blocks</a></li>
+                                
+                            </ul>
+                        </details>
+                        
+                    </div>
                     
 
                     <div id="content">
                         <!-- prettier-ignore -->
-<p>This page is always placed after &quot;Sorting&quot;</p>
+<p>New layouts can be added similarly to <a href="./overriding-templates.html">overriding templates</a> by creating a new file in the template folder with the <code>.template.html</code> extension.</p>
+<p><code>templates/foobar.template.html</code>:</p>
+
+                <div
+                    id="example-2e3391"
+                    class="code-preview code-preview--default"
+                    
+                    data-tags=static
+                    data-language="html"
+                >
+                    
+                    <pre class="code-preview__markup"><code class="hljs lang-html" tabindex="0">{% extends &quot;base.template.html&quot; %}
+</code></pre>
+                </div>
+            <p>To use this template on your page set <code>layout</code> to <code>foobar</code>.</p>
+<p>Layouts are created with the <a href="https://mozilla.github.io/nunjucks/">Nunjucks</a> templating engine.</p>
+<h2 id="base_template"><a class="header-anchor" href="#base_template">Base template</a></h2><p>The template must override one of the base templates.</p>
+<ul>
+<li><code>base.template.html</code> - base template for all layouts</li>
+<li><code>content-with-menu.template.html</code> - template for layouts with side navigation.</li>
+<li><code>content-without-menu.template.html</code> - template for layouts without side navigation.</li>
+</ul>
+<p>Read more about <a href="./plumbing.html">plumbing</a> for details how these may be customized.</p>
+<h2 id="layout_options"><a class="header-anchor" href="#layout_options">Layout options</a></h2><p>The builtin <code>base.template.html</code> comes with the following options:</p>
+<ul>
+<li><code>showAside</code> - if <code>true</code> the aside block on the right side will be shown.</li>
+</ul>
+<p>Properties can be set with:</p>
+
+                <div
+                    id="example-32dd2e"
+                    class="code-preview code-preview--default"
+                    
+                    data-tags=static
+                    data-language="html"
+                >
+                    
+                    <pre class="code-preview__markup"><code class="hljs lang-html" tabindex="0">{% set showAside = true %} {% extends &quot;base.template.html&quot; %}
+</code></pre>
+                </div>
+            <h2 id="layout_blocks"><a class="header-anchor" href="#layout_blocks">Layout blocks</a></h2><ul>
+<li><code>sidenav</code> - content displayed on the right side.</li>
+<li><code>aside</code> - content displayed on the right side if <code>showAside</code> is enabled.</li>
+<li><code>content</code> - primary content.</li>
+</ul>
 
 
                     </div>
@@ -481,7 +422,7 @@
 
         <!-- prettier-ignore -->
         <script
-            src="../../assets/main-729d06.js"
+            src="../assets/main-729d06.js"
             crossorigin
             integrity="sha384-HLu1zO6DBGpmW4WuGwrpWzmRozXXm6Fkq/tasZvtCw/oQE6qOT61YnBkCWBci5xx"
             
@@ -490,9 +431,9 @@
 
     <!--
 
-         Source file: docs/navigation/sorted-group/sorted-page-3.md
-         Document ID: fs:docs/navigation/sorted-group/sorted-page-3.md
-         Document name: sorted-page-3
+         Source file: docs/layout/custom-layout.md
+         Document ID: fs:docs/layout/custom-layout.md
+         Document name: custom-layout
          Document alias: 
 
     -->
