--- a/pr-preview/pr-91/layout/custom-layout-b2f5e1.html
+++ b/pr-preview/pr-91/layout/custom-layout-b2f5e1.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <title>Live example - FK Documentation generator</title>
+        <title>Custom layout - FK Documentation generator</title>
 
         <!-- prettier-ignore -->
         <link
@@ -46,14 +46,7 @@
             
         ></script>
 
-        <main>
-        <div id="README"></div>
-        <!-- [html-validate-disable-next element-permitted-content -- technical debt, should be inserted into <head>] -->
-        <style>
-            
-        </style>
-        <!-- [html-validate-disable-next require-sri -- technical debt, should generate integrity but we don't know the hash of the compiled file yet] -->
-        <script defer src="./README-60024d.js"></script>
-    </main>
+        <main>{% set showAside = true %} {% extends "base.template.html" %}
+</main>
     </body>
 </html>
