feat: new `{@optional}` tag

--- a/src/style/core.scss
+++ b/src/style/core.scss
@@ -6,6 +6,7 @@
 @use "outline";
 @use "selectable_version";
 @use "skeleton";
+@use "tags";
 @use "version_banner";
 
 /* reset broken FKUI reset */
