Deploy preview for PR 103 🛫

--- a/pr-preview/pr-103/layout/plumbing.html
+++ b/pr-preview/pr-103/layout/plumbing.html
@@ -172,9 +172,9 @@
 </div>
 <div class="toolbar__item">
     <span class="version">
-        bugfix/responsive-menu-styling (<a href="https://github.com/Forsakringskassan/docs-generator/commits/3ce4537a6e31db91151be4e7c759acbe2004a57e">3ce4537</a>)<br />
+        bugfix/responsive-menu-styling (<a href="https://github.com/Forsakringskassan/docs-generator/commits/4093fa5bf96b0949d1cb8085ae64076c836f4c25">4093fa5</a>)<br />
         <a href="https://github.com/Forsakringskassan/docs-generator/pull/103">PR 103</a><br />
-        2024-10-06 11:43
+        2024-10-06 13:07
     </span>
 </div>
 </div>
@@ -378,9 +378,9 @@
 
         <!-- prettier-ignore -->
         <script
-            src="../assets/main-5937c9.js"
+            src="../assets/main-d7ec61.js"
             crossorigin
-            integrity="sha384-cJOpAd8b1mMe/qf4+elxVhDldReFOpOyUwiBUtGc21mQDDpCvF2kyZiWucHaf9pJ"
+            integrity="sha384-KsZCZ69AH4Kp9ioEhE/d5oY+l5rP/I5tx5IQsI+peVKwR7BOFDZ4L9CW9ZhRF4cQ"
             
         ></script>
     </body>
