refactor(stylelint): fix stylelint errors

--- a/src/style/_contextmenu.scss
+++ b/src/style/_contextmenu.scss
@@ -5,7 +5,7 @@
         background: inherit;
         border-radius: 2px;
         border: 1px solid var(--docs-contextmenu-border-color);
-        box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+        box-shadow: 0 0 20px rgb(0 0 0 / 30%);
         color: var(--docs-contextmenu-link-color);
         display: block;
         font-weight: normal;
