--- a/src/style/_topnav.scss
+++ b/src/style/_topnav.scss
@@ -13,7 +13,7 @@
     &__item {
         display: inline-flex;
         list-style-type: none;
-        padding: 1.1rem 0 0 0;
+        padding: 1.1rem 0 0;
         white-space: nowrap;
 
         &.highlight {
