--- a/src/style/core.scss
+++ b/src/style/core.scss
@@ -121,10 +121,7 @@ h1 code {
 /* Page header - inverted */
 header .page-header {
     background-color: #fff;
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
-    padding-left: 1.2rem;
-    padding-right: 1.2rem;
+    padding: 0.5rem 1.2rem;
     border-bottom: 1px solid #ddddde;
     flex-wrap: wrap;
 }
