Deploy preview for PR 157 🛫

--- a/pr-preview/pr-157/docs-generator/assets/docs-8631f2.css
+++ b/pr-preview/pr-157/docs-generator/assets/docs-8631f2.css
@@ -11,6 +11,10 @@
   margin-bottom: 0.5rem;
 }
 
+.docs-api__name {
+  font-weight: bold;
+}
+
 .docs-api__deprecated, .docs-api__item, .docs-api__list-title {
   margin: 1rem 0 0;
 }
