Deploy preview for PR 159 🛫

--- a/pr-preview/pr-159/docs-generator/assets/docs-792ba8.css
+++ b/pr-preview/pr-159/docs-generator/assets/docs-792ba8.css
@@ -889,6 +889,18 @@ h1 code {
   font-weight: 400;
 }
 
+h1 code,
+h2 code,
+h3 code,
+h4 code,
+h5 code,
+h6 code {
+  font-size: inherit;
+  margin: 0;
+  padding: 0;
+  text-decoration: inherit;
+}
+
 #content a:not(.code-preview a) {
   color: var(--docs-text-color-default);
 }
