--- a/src/style/core.scss
+++ b/src/style/core.scss
@@ -1,3 +1,4 @@
+@use "api";
 @use "breakpoints" as bp;
 @use "typography";
 @use "layout";
@@ -110,11 +111,11 @@ h6 {
     }
 }
 
-#content a:not(.code-preview a) {
+#content a:where(:not(.code-preview a)) {
     color: var(--docs-text-color-default);
 }
 
-#content a:not(.code-preview a, h2 a, h3 a, h4 a, h5 a) {
+#content a:where(:not(.code-preview a, h2 a, h3 a, h4 a, h5 a)) {
     text-decoration: underline;
     text-decoration-thickness: 1px;
     color: var(--f-text-color-link);
@@ -122,7 +123,7 @@ h6 {
     text-underline-offset: 0.15rem;
 }
 
-#content a:hover:not(.code-preview a, h2 a, h3 a, h4 a, h5 a) {
+#content a:where(:hover:not(.code-preview a, h2 a, h3 a, h4 a, h5 a)) {
     color: var(--f-text-color-default);
     text-decoration-color: var(--docs-text-link-hover);
 }
@@ -289,52 +290,6 @@ main #aside dd {
     margin: 0 0 1.5rem;
 }
 
-.docs-table {
-    overflow-x: auto;
-    margin-bottom: 48px;
-}
-
-.docs-table table {
-    width: 100%;
-    border-collapse: collapse;
-}
-
-.docs-table p {
-    margin: 0;
-}
-
-.docs-table caption {
-    text-align: left;
-    font-size: var(--f-font-size-large);
-    font-weight: var(--f-font-weight-bold);
-    margin-top: 0.5rem;
-}
-
-.docs-table thead {
-    border-bottom: 1px solid #8d8e91;
-}
-
-.docs-table th {
-    padding-right: 16px;
-    padding-bottom: 4px;
-    padding-left: 8px;
-    text-align: left;
-    font-weight: var(--f-font-weight-medium);
-    white-space: nowrap;
-}
-
-/* not: turn off for additional tables inside the table */
-.docs-table tr:nth-child(even):not(.api-table tr tr) {
-    background-color: #f4f4f4;
-}
-
-.docs-table td {
-    color: rgb(51 51 51);
-    padding: 1rem 1rem 1rem 0.5rem;
-    vertical-align: top;
-    border-bottom: 1px solid rgb(232 232 232);
-}
-
 .code-preview {
     main,
     header,
@@ -480,4 +435,8 @@ kbd {
 
 #search-results .list__item__itempane:focus {
     background-color: #f4f4f4;
+}
+
+.docs-deprecated {
+    color: var(--docs-error-color);
 }
