--- a/src/style/core.scss
+++ b/src/style/core.scss
@@ -90,7 +90,7 @@ h6 .header-anchor {
 }
 
 h1 code {
-    color: #5f6165;
+    color: var(--docs-text-color-default);
     font-family: var(--docs-font-family);
     background-color: transparent;
     font-weight: 400;
@@ -114,7 +114,7 @@ h6 {
     color: var(--docs-text-color-default);
 }
 
-#content a:not(.code-preview a, h2 a, h3 a, h4 a, h5 a) {
+#content a:not(.code-preview a, h1 a, h2 a, h3 a, h4 a, h5 a) {
     text-decoration: underline;
     text-decoration-thickness: 1px;
     color: var(--f-text-color-link);
@@ -122,7 +122,7 @@ h6 {
     text-underline-offset: 0.15rem;
 }
 
-#content a:hover:not(.code-preview a, h2 a, h3 a, h4 a, h5 a) {
+#content a:hover:not(.code-preview a, h1, h2 a, h3 a, h4 a, h5 a) {
     color: var(--f-text-color-default);
     text-decoration-color: var(--docs-text-link-hover);
 }
